# tutorial-landsat-from-mspc

./: .gitignore  _quarto.yml  index.ipynb  pyproject.toml
_freeze/index/execute-results/: html.json  ipynb.json
