[project]
authors = [ # Replace with the authors' names and emails
  {name = "Jane Smith", email = "Jane@example.com"},
  {name = "John Smith", email = "john@example.com"},
]
dependencies = []
name = "mspc_stac"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

# Pixi configuration
# See: https://pixi.sh/latest/reference/pixi_manifest/
[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
xarray = { version = "==2025.1.2", extras = ["io"] }


[tool.pixi.tasks]
start = "jupyter lab index.ipynb"

[tool.pixi.dependencies]  # Specify conda package dependencies required by the tutorial
python = "==3.12"

netcdf4 = ">=1.7.2,<2"
jupyter = ">=1.1.1,<2"
pystac-client = ">=0.8.6,<0.9"
geopandas = ">=1.0.1,<2"
rich = ">=13.9.4,<14"
planetary-computer = ">=1.0.0,<2"
rioxarray = ">=0.18.2,<0.19"
stackstac = ">=0.5.1,<0.6"
rasterio = ">=1.4.3,<2"
requests = ">=2.32.3,<3"
aiohttp = ">=3.11.13,<4"
zarr = ">=3.0.4,<4"
ipykernel = ">=6.29.5,<7"